fix: update pricing details for services and enhance layout with additional spacing

--- a/app/components/prices-page/prices-page.module.css
+++ b/app/components/prices-page/prices-page.module.css
@@ -2,14 +2,25 @@
 .container {
   max-width: 800px;
   width: 100%;
-  margin-inline: auto;   /* always centered */
+  margin-inline: auto; /* always centered */
   padding: 20px;
+  padding-bottom: 4rem;
 }
 
 /* On smaller screens add padding, not margins */
 @media (max-width: 1200px) {
   .container {
     padding-inline: 24px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    margin-bottom: 3rem;
+  }
+
+  .tilbudContainer {
+    margin-bottom: 1rem;
   }
 }
 
@@ -21,12 +32,17 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   max-width: 350px;
   margin: 6rem auto;
+  margin-bottom: 2rem;
   cursor: pointer;
   overflow: hidden;
   transition: background-color 0.3s;
 }
-.tilbudContainer a { padding: 0; }
-.tilbudContainer:hover { background-color: hsl(0, 0%, 92%); }
+.tilbudContainer a {
+  padding: 0;
+}
+.tilbudContainer:hover {
+  background-color: hsl(0, 0%, 92%);
+}
 
 .tilbudHeader {
   background-color: var(--accent-color);
@@ -38,7 +54,9 @@
   font-size: 1.8rem;
 }
 
-.tilbudContent { padding: 2rem; }
+.tilbudContent {
+  padding: 2rem;
+}
 .tilbudContent ul {
   list-style: none;
   padding: 0;
